[package]
name = "samp-cron"
version = "0.0.1"
edition = "2021"
authors = ["Tiaansu <dev.marlon.cabading@gmail.com>"]

[lib]
name = "samp_cron"
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"

[dependencies]
samp = {git="https://github.com/Pycckue-Bnepeg/samp-rs"}
log = "0.4.6"
fern = "0.5.7"
rcron = "1.2.3"